sydbox: start writing functions in rust
Signed-off-by: Alï Polatel <alip@exherbo.org>

--- a/configure.ac
+++ b/configure.ac
@@ -736,6 +736,7 @@ fi
 AM_CONDITIONAL([WANT_DEBUG], test x"$WANT_DEBUG" = x"yes")
 AC_DEFINE_UNQUOTED([SYDBOX_DEBUG], [$SYDBOX_DEBUG], ['Enable debug support (requires: libunwind)'])
 AC_SUBST([SYDBOX_DEBUG])
+AC_SUBST([SYDBOX_CARGO_RELEASE_TYPE])
 AM_CONDITIONAL([SYDBOX_CARGO_RELEASE],
 	       test x"$SYDBOX_CARGO_RELEASE_TYPE" = x"release")
 
