--- a/Cargo.toml.in
+++ b/Cargo.toml.in
@@ -26,7 +26,7 @@ include = [
 ]
 [lib]
 name = "sydbox"
-crate-type = ["@SYDBOX_RUST_LIBTYPE@"]
+crate-type = ["@RUST_LIBTYPE@"]
 path = "src/lib.rs"
 
 [[bin]]
@@ -37,6 +37,7 @@ path = "src/pandora.rs"
 libc = "0.2"
 nix = "0.20"
 chrono = "0.4"
+cgroups-rs = "0.2.6"
 clap = "2.33"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
