--- a/Cargo.toml.in
+++ b/Cargo.toml.in
@@ -37,11 +37,16 @@ path = "src/pandora.rs"
 libc = "0.2"
 nix = "0.20"
 chrono = "0.4"
+# Native Rust crate for managing control groups on Linux
+# TODO: integrate.
 cgroups-rs = "0.2.6"
 clap = "2.33"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tempfile = "3.2.0"
+# The low-level interface for linux namespaces (containers)
+# TODO: integrate.
+unshare = "0.7.0"
 
 [build-dependencies]
 built = {version = "0.4.4", features=["git2", "chrono"]}
