cbindgen is no longer required, update man page, finish implementing and document new unshare options
Signed-off-by: Alï Polatel <alip@exherbo.org>

--- a/Cargo.toml.in
+++ b/Cargo.toml.in
@@ -50,6 +50,7 @@ unshare = "0.7.0"
 
 [build-dependencies]
 built = {version = "0.4.4", features=["git2", "chrono"]}
+cbindgen = "0.19.0"
 
 [dev-dependencies]
 hyperfine = "1.11.0"
