--- a/configure.ac
+++ b/configure.ac
@@ -170,11 +170,11 @@ SYDBOX_STATIC_CFLAGS=
 if test x"$enable_static" = x"yes"; then
 	SYDBOX_LIBTOOL_FLAGS="-all-static"
 	SYDBOX_STATIC_CFLAGS="-static"
-	SYDBOX_RUST_LIBTYPE="staticlib"
+	SYDBOX_RUST_LIBTYPES='"staticlib"'
 else
-	SYDBOX_RUST_LIBTYPE="cdylib"
+	SYDBOX_RUST_LIBTYPES='"staticlib","cdylib"'
 fi
-AC_SUBST([SYDBOX_RUST_LIBTYPE])
+AC_SUBST([SYDBOX_RUST_LIBTYPES])
 AC_SUBST([SYDBOX_LIBTOOL_FLAGS])
 AC_SUBST([SYDBOX_STATIC_CFLAGS])
 AM_CONDITIONAL([ENABLE_STATIC], test x"$enable_static" = x"yes")
