--- a/src/lib.rs.in
+++ b/src/lib.rs.in
@@ -22,13 +22,8 @@ use std::ffi::CStr;
 use std::ffi::OsStr;
 use std::os::unix::ffi::OsStrExt;
 
-#[allow(unused_imports)]
-use std::io::{stderr, Read, Write};
-#[allow(unused_imports)]
-use std::process::exit;
-//use std::path::PathBuf;
+use std::io::Read;
 
-//use unshare::Namespace;
 use libc::{c_char, gid_t};
 
 #[doc = "Print SydB☮x version and build details to standard error."]
@@ -72,6 +67,8 @@ pub extern "C" fn syd_execv(
     unshare_uts: bool,
     unshare_ipc: bool,
     unshare_user: bool,
+    close_fds_beg: i32,
+    close_fds_end: i32,
     escape_stdout: bool,
     supplementary_gids: *const u32,
     pid_env_var: *const c_char,
@@ -158,7 +155,16 @@ pub extern "C" fn syd_execv(
         namespaces.push(Namespace::User);
     }
     cmd.unshare(&namespaces);
-    cmd.close_fds(..);
+
+    if close_fds_beg == 0 && close_fds_end == 0 {
+        /* do nothing */
+    } else if close_fds_beg == 3 && close_fds_end == 0 {
+        cmd.close_fds(..);
+    } else if close_fds_beg != 0 && close_fds_end == 0 {
+        cmd.close_fds(close_fds_beg..);
+    } else {
+        cmd.close_fds(close_fds_beg..close_fds_end);
+    }
 
     if escape_stdout {
         cmd.stdout(unshare::Stdio::piped());
