--- a/src/lib.rs.in
+++ b/src/lib.rs.in
@@ -25,6 +25,7 @@ use std::os::unix::ffi::OsStrExt;
 use std::io::Read;
 
 use libc::{c_char, gid_t};
+pub use nix::sys::signal::Signal;
 
 #[doc = "Print SydB☮x version and build details to standard error."]
 #[no_mangle]
@@ -71,7 +72,10 @@ pub extern "C" fn syd_execv(
     unshare_user: bool,
     close_fds_beg: i32,
     close_fds_end: i32,
+    reset_fds: bool,
     escape_stdout: bool,
+    allow_daemonize: bool,
+    parent_death_signal: i32,
     supplementary_gids: *const u32,
     pid_env_var: *const c_char,
 ) -> i32 {
@@ -167,6 +171,10 @@ pub extern "C" fn syd_execv(
     }
     cmd.unshare(&namespaces);
 
+    if reset_fds {
+        cmd.reset_fds();
+    }
+
     if close_fds_beg == 0 && close_fds_end == 0 {
         /* do nothing */
     } else if close_fds_beg == 3 && close_fds_end == 0 {
@@ -179,6 +187,14 @@ pub extern "C" fn syd_execv(
 
     if escape_stdout {
         cmd.stdout(unshare::Stdio::piped());
+    }
+
+    if parent_death_signal > 0 {
+        cmd.set_parent_death_signal(Signal::from(parent_death_signal));
+    }
+
+    if allow_daemonize {
+        cmd.allow_daemonize();
     }
 
     slice = unsafe { CStr::from_ptr(pid_env_var) };
